create-footer-section

--- a/country_main.html
+++ b/country_main.html
@@ -35,17 +35,20 @@
       </form>
       <div class="container-country-main">
         <img
+          class="img-country-flag"
           src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/Flag_of_Poland_2.svg/400px-Flag_of_Poland_2.svg.png"
           alt=""
         />
-        <div class="country-name-region-container">
-          <h2>Poland</h2>
-          <h3>Europe</h3>
-        </div>
-        <div class="country-info-cointainer">
-          <p>💬 Polish</p>
-          <p>💰 PLN</p>
-          <p>👬 36</p>
+        <div class="container-country-lower-section">
+          <div class="country-name-region-container">
+            <h2>Poland</h2>
+            <h3>Europe</h3>
+          </div>
+          <div class="country-info-cointainer">
+            <p>💬 Polish</p>
+            <p>💰 PLN</p>
+            <p>👬 36</p>
+          </div>
         </div>
       </div>
     </main>
