hardcoded-main-country-info

--- a/country_main.html
+++ b/country_main.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/x-icon" href="Icons/icons8-globe-16.png" />
     <link rel="stylesheet" href="country_main.css" />
     <link rel="stylesheet" href="country_assets.css" />
-    <script src="country_main.js"></script>
+
     <title>Country App</title>
   </head>
   <body>
@@ -23,13 +23,7 @@
     <main>
       <form>
         <div class="form__group">
-          <input
-            type="text"
-            class="form__input"
-            id="name"
-            placeholder="Country Name"
-            required=""
-          />
+          <input type="text" class="form__input" placeholder="Country Name" />
           <label for="name" class="form__label">Country Name</label>
         </div>
       </form>
@@ -44,7 +38,7 @@
             <h2>Poland</h2>
             <h3>Europe</h3>
           </div>
-          <div class="country-info-cointainer">
+          <div class="country-info-container">
             <p>💬 Polish</p>
             <p>💰 PLN</p>
             <p>👬 36</p>
@@ -56,4 +50,5 @@
       <p>Design and create by <a href="">Patryk Zawistowski</a></p>
     </footer>
   </body>
+  <script src="country_main.js"></script>
 </html>
