fully-functional-country-card

--- a/country_main.html
+++ b/country_main.html
@@ -27,10 +27,10 @@
           <label for="name" class="form__label">Country Name</label>
         </div>
       </form>
-      <div class="container-country-main">
+      <!-- <div class="container-country-main">
         <img
           class="img-country-flag"
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/Flag_of_Poland_2.svg/400px-Flag_of_Poland_2.svg.png"
+          src=""
           alt=""
         />
         <div class="container-country-lower-section">
@@ -44,7 +44,7 @@
             <p>👬 36</p>
           </div>
         </div>
-      </div>
+      </div> -->
     </main>
     <footer>
       <p>Design and create by <a href="">Patryk Zawistowski</a></p>
