starting-implement-border-country

--- a/country_main.html
+++ b/country_main.html
@@ -27,7 +27,8 @@
           <label for="name" class="form__label">Country Name</label>
         </div>
       </form>
-      <!-- <div class="container-country-main">
+      <wrapper class="container-main">
+        <!-- <div class="container-country-main">
         <img
           class="img-country-flag"
           src=""
@@ -45,6 +46,7 @@
           </div>
         </div>
       </div> -->
+      </wrapper>
     </main>
     <footer>
       <p>Design and create by <a href="">Patryk Zawistowski</a></p>
