adding-display-grid-rendering-neigbourcountry

--- a/country_main.html
+++ b/country_main.html
@@ -47,6 +47,7 @@
         </div>
       </div> -->
       </wrapper>
+      <wrapper class="container-neighbour"> </wrapper>
     </main>
     <footer>
       <p>Design and create by <a href="">Patryk Zawistowski</a></p>
