starting-reorganising-UI and UX

--- a/country_main.html
+++ b/country_main.html
@@ -18,17 +18,20 @@
   </head>
   <body>
     <header>
-      <h1>Enter the country you want to know about</h1>
+      <img
+        class="app-logo"
+        src="Icons/Lovepik_com-400221236-globe.png"
+        alt="application logo"
+      />
+      <div class="center-content-header">
+      <p>Enter the country you want to know about</p>
+      <input type="text" />
+    </div>
     </header>
+    <!--
     <main>
-      <form>
-        <div class="form__group">
-          <input type="text" class="form__input" placeholder="Country Name" />
-          <label for="name" class="form__label">Country Name</label>
-        </div>
-      </form>
       <wrapper class="container-main">
-        <!-- <div class="container-country-main">
+         <div class="container-country-main">
         <img
           class="img-country-flag"
           src=""
@@ -45,9 +48,10 @@
             <p>👬 36</p>
           </div>
         </div>
-      </div> -->
+      </div> 
       </wrapper>
       <wrapper class="container-neighbour"> </wrapper>
+      -->
     </main>
     <footer>
       <p>Design and create by <a href="">Patryk Zawistowski</a></p>
