contiune reorganising UI

--- a/country_main.html
+++ b/country_main.html
@@ -18,15 +18,18 @@
   </head>
   <body>
     <header>
+      <div class="cointerner-left-side">
       <img
         class="app-logo"
         src="Icons/Lovepik_com-400221236-globe.png"
         alt="application logo"
       />
-      <div class="center-content-header">
+      <div class="left-content-header">
       <p>Enter the country you want to know about</p>
       <input type="text" />
     </div>
+  </div>
+    <button>Switch</button>
     </header>
     <!--
     <main>
@@ -54,7 +57,7 @@
       -->
     </main>
     <footer>
-      <p>Design and create by <a href="">Patryk Zawistowski</a></p>
+      <p>Design and create by <a href="https://github.com/Avvensome" target="_blank">Patryk Zawistowski</a></p>
     </footer>
   </body>
   <script src="country_main.js"></script>
