starting-implement button color switcher

--- a/country_main.html
+++ b/country_main.html
@@ -29,7 +29,7 @@
       <input type="text" />
     </div>
   </div>
-    <button>Switch</button>
+    <button>Click To Switch Color</button>
     </header>
     <!--
     <main>
