selecting root styles

--- a/country_main.html
+++ b/country_main.html
@@ -19,45 +19,44 @@
   <body>
     <header>
       <div class="cointerner-left-side">
-      <img
-        class="app-logo"
-        src="Icons/Lovepik_com-400221236-globe.png"
-        alt="application logo"
-      />
-      <div class="left-content-header">
-      <p>Enter the country you want to know about</p>
-      <input type="text" />
-    </div>
-  </div>
-    <button>Click To Switch Color</button>
+        <img
+          class="app-logo"
+          src="Icons/Lovepik_com-400221236-globe.png"
+          alt="application logo"
+        />
+        <div class="left-content-header">
+          <p>Enter the country you want to know about</p>
+          <input type="text" />
+        </div>
+      </div>
+      <button>Click To Switch Color</button>
     </header>
-    <!--
+
     <main>
       <wrapper class="container-main">
-         <div class="container-country-main">
-        <img
-          class="img-country-flag"
-          src=""
-          alt=""
-        />
-        <div class="container-country-lower-section">
-          <div class="country-name-region-container">
-            <h2>Poland</h2>
-            <h3>Europe</h3>
+        <!-- <div class="container-country-main-">
+          <img class="img-country-flag" src="" alt="" />
+          <div class="container-country-lower-section">
+            <div class="country-name-region-container">
+              <h2>Poland</h2>
+              <h3>Europe</h3>
+            </div>
+            <div class="country-info-container">
+              <p>💬 Polish</p>
+              <p>💰 PLN</p>
+              <p>👬 36</p>
+            </div>
           </div>
-          <div class="country-info-container">
-            <p>💬 Polish</p>
-            <p>💰 PLN</p>
-            <p>👬 36</p>
-          </div>
-        </div>
-      </div> 
+        </div> -->
       </wrapper>
-      <wrapper class="container-neighbour"> </wrapper>
-      -->
     </main>
     <footer>
-      <p>Design and create by <a href="https://github.com/Avvensome" target="_blank">Patryk Zawistowski</a></p>
+      <p>
+        Design and create by
+        <a href="https://github.com/Avvensome" target="_blank"
+          >Patryk Zawistowski</a
+        >
+      </p>
     </footer>
   </body>
   <script src="country_main.js"></script>
