still-adding-dark-mode

--- a/country_main.html
+++ b/country_main.html
@@ -25,7 +25,7 @@
           alt="application logo"
         />
         <div class="left-content-header">
-          <p>Enter the country you want to know about</p>
+          <h1>Enter the country you want to know about</h1>
           <input type="text" />
         </div>
       </div>
