--- a/country_main.html
+++ b/country_main.html
@@ -29,7 +29,10 @@
           <input type="text" />
         </div>
       </div>
-      <button>Click To Switch Color</button>
+      <div class="cointeiner-right-side">
+        <img src="" />
+        <button>Click To Switch Color</button>
+      </div>
     </header>
 
     <main>
