--- a/country_main.html
+++ b/country_main.html
@@ -30,7 +30,31 @@
         </div>
       </div>
       <div class="cointeiner-right-side">
-        <img src="" />
+        <div class="pop-up-window-container">
+          <img class="filter-icon" src="Icons/pngegg.png" alt="filter icon" />
+          <div class="pop-up-window">
+            <label>
+              <input type="checkbox" name="myCheckbox" value="myValue" />
+              <p>💬 Languages</p>
+            </label>
+            <label>
+              <input type="checkbox" name="myCheckbox" value="myValue" />
+              <p>💰 Currencies</p>
+            </label>
+            <label>
+              <input type="checkbox" name="myCheckbox" value="myValue" />
+              <p>👬 Population</p>
+            </label>
+            <label>
+              <input type="checkbox" name="myCheckbox" value="myValue" />
+              <p>🏙️ Capital</p>
+            </label>
+            <label>
+              <input type="checkbox" name="myCheckbox" value="myValue" />
+              <p>⏱Time zone</p>
+            </label>
+          </div>
+        </div>
         <button>Click To Switch Color</button>
       </div>
     </header>
