implementing-filter-feature

--- a/country_main.html
+++ b/country_main.html
@@ -32,7 +32,7 @@
       <div class="cointeiner-right-side">
         <div class="pop-up-window-container">
           <img class="filter-icon" src="Icons/pngegg.png" alt="filter icon" />
-          <div class="pop-up-window">
+          <div class="pop-up-window pop-up-window-hide">
             <label>
               <input type="checkbox" name="myCheckbox" value="myValue" />
               <p>💬 Languages</p>
@@ -52,6 +52,10 @@
             <label>
               <input type="checkbox" name="myCheckbox" value="myValue" />
               <p>⏱Time zone</p>
+            </label>
+            <label>
+              <input type="checkbox" name="myCheckbox" value="myValue" />
+              <p>🗺️Location</p>
             </label>
           </div>
         </div>
