--- a/country_main.html
+++ b/country_main.html
@@ -34,27 +34,27 @@
           <img class="filter-icon" src="Icons/pngegg.png" alt="filter icon" />
           <div class="pop-up-window pop-up-window-hide">
             <label>
-              <input type="checkbox" name="myCheckbox" value="myValue" />
+              <input type="checkbox" id="languages" />
               <p>💬 Languages</p>
             </label>
             <label>
-              <input type="checkbox" name="myCheckbox" value="myValue" />
+              <input type="checkbox" id="currencies" />
               <p>💰 Currencies</p>
             </label>
             <label>
-              <input type="checkbox" name="myCheckbox" value="myValue" />
+              <input type="checkbox" id="population" />
               <p>👬 Population</p>
             </label>
             <label>
-              <input type="checkbox" name="myCheckbox" value="myValue" />
+              <input type="checkbox" id="capital" />
               <p>🏙️ Capital</p>
             </label>
             <label>
-              <input type="checkbox" name="myCheckbox" value="myValue" />
+              <input type="checkbox" id="timezones" />
               <p>⏱Time zone</p>
             </label>
             <label>
-              <input type="checkbox" name="myCheckbox" value="myValue" />
+              <input type="checkbox" id="map-info" />
               <p>🗺️Location</p>
             </label>
           </div>
