--- a/country_main.html
+++ b/country_main.html
@@ -34,15 +34,15 @@
           <img class="filter-icon" src="Icons/pngegg.png" alt="filter icon" />
           <div class="pop-up-window pop-up-window-hide">
             <label>
-              <input type="checkbox" id="languages" />
+              <input type="checkbox" id="languages" checked />
               <p>💬 Languages</p>
             </label>
             <label>
-              <input type="checkbox" id="currencies" />
+              <input type="checkbox" id="currencies" checked />
               <p>💰 Currencies</p>
             </label>
             <label>
-              <input type="checkbox" id="population" />
+              <input type="checkbox" id="population" checked />
               <p>👬 Population</p>
             </label>
             <label>
