--- a/country_main.html
+++ b/country_main.html
@@ -6,18 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="country_main.css" />
+    <link rel="icon" type="image/x-icon" href="Icons/icons8-globe-16.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/x-icon" href="Icons/icons8-globe-16.png" />
-    <link rel="stylesheet" href="country_main.css" />
-    <link rel="stylesheet" href="country_assets.css" />
-    <!-- Leaflet -->
+    <!-- <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+      integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+      crossorigin=""
+    /> -->
+    <script src="country_main.js" defer></script>
     <script
       src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
       integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
       crossorigin=""
+      defer
     ></script>
     <title>Country App</title>
   </head>
@@ -69,24 +75,7 @@
     </header>
 
     <main>
-      <wrapper class="container-main">
-        <!-- <div class="container-country-main-">
-          <img class="img-country-flag" src="" alt="" />
-          <div class="container-country-lower-section">
-            <div class="country-name-region-container">
-              <h2>Poland</h2>
-              <h3>Europe</h3>
-            </div>
-            <div class="country-info-container">
-              <p>💬 Polish</p>
-              <p>💰 PLN</p>
-              <div class="pop-up-window-container">
-                <p>👬 36</p>
-              </div>
-            </div>
-          </div>
-        </div> -->
-      </wrapper>
+      <wrapper class="container-main"> </wrapper>
     </main>
     <footer>
       <p>
@@ -97,11 +86,4 @@
       </p>
     </footer>
   </body>
-  <script src="country_main.js"></script>
-  <!-- Make sure you put this AFTER Leaflet's CSS -->
-  <script
-    src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
-    integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
-    crossorigin=""
-  ></script>
 </html>
