Prepering html css for omplementing search history

--- a/country_main.html
+++ b/country_main.html
@@ -76,6 +76,24 @@
 
     <main>
       <wrapper class="container-main"> </wrapper>
+      <wrapper class="history-container-main">
+        <div class="history-container">
+          <ul>
+            <p>Search History</p>
+            <li>Espana</li>
+            <li>Poland</li>
+            <li>Rusian Federation</li>
+            <li>312</li>
+            <li>312</li>
+            <li>312</li>
+            <li>312</li>
+            <li>312</li>
+            <li>312</li>
+            <p>🗑️</p>
+          </ul>
+          <button>📜</button>
+        </div>
+      </wrapper>
     </main>
     <footer>
       <p>
