Implementing Search Hsitory

--- a/country_main.html
+++ b/country_main.html
@@ -69,9 +69,10 @@
 			<wrapper class="container-main"> </wrapper>
 			<wrapper class="history-container-main">
 				<div class="history-container">
-					<ul>
-						<p>Search History</p>
-					</ul>
+					<p>Search History</p>
+					<div class="history-container-list">
+						<ul class="history-list"></ul>
+					</div>
 					<p class="history-container-btn">🗑️</p>
 					<button>📜</button>
 				</div>
