Updating error Handlig

--- a/country_main.html
+++ b/country_main.html
@@ -67,6 +67,11 @@
 
 		<main>
 			<wrapper class="container-main"> </wrapper>
+			<wrapper class="error-notification-container">
+				<div class="error-notification">
+					<p>Something went wrong</p>
+				</div>
+			</wrapper>
 			<wrapper class="history-container-main">
 				<div class="history-container">
 					<p>Search History</p>
